--- a/MyCluster/static/styles.css
+++ b/MyCluster/static/styles.css
@@ -1,34 +1,26 @@
-/* styles.css */
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
-
-nav ul {
-    list-style-type: none;
+    background-color: #f9f9f9;
+    margin: 0;
     padding: 0;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 10px;
+h1 {
+    text-align: center;
+    margin-top: 20px;
 }
 
 table {
-    width: 100%;
+    width: 80%;
+    margin: 20px auto;
     border-collapse: collapse;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
-    border: 1px solid #dddddd;
-    padding: 8px;
+    padding: 12px;
+    border: 1px solid #ddd;
     text-align: left;
 }
 
@@ -37,19 +29,22 @@ th {
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #f9f9f9;
 }
 
-nav ul li a {
+a {
+    display: block;
+    width: 80%;
+    margin: 20px auto;
+    text-align: center;
     text-decoration: none;
-    color: #333;
     padding: 10px;
-    border: 1px solid #333;
+    background-color: #007bff;
+    color: white;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-nav ul li a:hover {
-    background-color: #333;
-    color: #fff;
+a:hover {
+    background-color: #0056b3;
 }
