--- a/MyCluster/templates/index.html
+++ b/MyCluster/templates/index.html
@@ -13,58 +13,71 @@
             background-color: #f9f9f9;
         }
         header {
-            background-color: #333;
-            color: cyan;
-            padding: 20px 0;
-            text-align: center;
-            margin-bottom: 20px;
-            border-bottom: 2px solid #ddd;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
+    background: linear-gradient(135deg, #72edf2 10%, #5151e5 100%);
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #ddd;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
         h1 {
             margin: 0;
         }
-        nav {
-            text-align: center;
-        }
         nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-        nav ul li {
-            display: inline-block;
-            margin: 10px;
-            width: 200px; 
-        }
-        nav ul li a {
-            text-decoration: none;
-            color: #333;
-            padding: 20px;
-            border: 2px solid #333;
-            border-radius: 8px;
-            transition: background-color 0.3s ease;
-            display: block;
-            font-size: 20px;
-            font-weight: bold;
-            background-color: #fff;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        nav ul li a:hover {
-            background-color: lightblue;
-            color: black;
-        }
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+nav ul li {
+    flex: 0 0 200px;
+    margin: 10px;
+  
+}
+
+nav ul li a {
+   
+    height: 100px;
+    text-decoration: none;
+    color: #333;
+    padding: 20px;
+    border: 2px solid #333;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    background-color: #fff;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+nav ul li a:hover {
+    background-color: lightblue;
+    color: black;
+    transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
     </style>
 </head>
 <body>
     <header>
-        <h1>My Cluster Dashboard</h1>
+        <h1>Kubernetes Cluster Dashboard</h1>
     </header>
     <nav>
         <ul>
             <li><a href="{{ url_for('check_nodes') }}">Check Nodes</a></li>
             <li><a href="{{ url_for('check_pods') }}">Check Pods</a></li>
+            <li><a href="{{ url_for('check_deployments') }}">Check Deployments</a></li>
+            <li><a href="{{ url_for('check_services') }}">Check Services</a></li>
+            <li><a href="{{ url_for('check_namespaces') }}">Check Namespaces</a></li>
+            <li><a href="{{ url_for('check_np_detector_logs') }}">Check NPD Logs</a></li>
         </ul>
     </nav>
 </body>
