--- a/MyCluster/templates/alerts.html
+++ b/MyCluster/templates/alerts.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8">
     <title>Pod CPU and Memory Usage</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='alerts.css') }}">
+    <style>
+        .back-button {
+            display: block;
+            margin: 20px auto;
+            width: 200px;
+            text-align: center;
+            padding: 10px 20px;
+            background-color: #5151e5;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            font-weight: bold;
+        }
+        .back-button:hover {
+            background-color: #72edf2;
+            color: #333;
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
     <script>
         function confirmRestart(podName) {
             return confirm(`Are you sure you want to restart the pod: ${podName}?`);
@@ -56,5 +77,6 @@
             {% endfor %}
         </table>
     </div>
+    <a href="/welcome" class="back-button">Back to Home</a>
 </body>
 </html>
