--- a/MyCluster/templates/services.html
+++ b/MyCluster/templates/services.html
@@ -35,6 +35,6 @@
         </tr>
         {% endfor %}
     </table>
-    <a href="/cluster">Back to Home</a>
+    <a href="/cluster">Back to Dashboard</a>
 </body>
 </html>
