--- a/MyCluster/templates/deployments.html
+++ b/MyCluster/templates/deployments.html
@@ -22,6 +22,6 @@
         </tr>
         {% endfor %}
     </table>
-    <a href="/cluster">Back to Home</a>
+    <a href="/cluster">Back to Dashboard</a>
 </body>
 </html>
