--- a/MyCluster/templates/namespaces.html
+++ b/MyCluster/templates/namespaces.html
@@ -18,6 +18,6 @@
         </tr>
         {% endfor %}
     </table>
-    <a href="/cluster">Back to Home</a>
+    <a href="/cluster">Back to Dashboard</a>
 </body>
 </html>
