--- a/MyCluster/templates/node_metrics.html
+++ b/MyCluster/templates/node_metrics.html
@@ -26,6 +26,6 @@
             {% endfor %}
         </tbody>
     </table>
-    <a href="/cluster">Back to Home</a>
+    <a href="/cluster">Back to Dashboard</a>
 </body>
 </html>
