--- a/MyCluster/templates/npd_logs.html
+++ b/MyCluster/templates/npd_logs.html
@@ -13,6 +13,6 @@
         <pre>{{ log.log }}</pre>
       {% endfor %}
     </div>
-    <a href="/cluster">Back to Home</a>
+    <a href="/cluster">Back to Dashboard</a>
   </body>
 </html>
