--- a/MyCluster/templates/pod_metrics.html
+++ b/MyCluster/templates/pod_metrics.html
@@ -34,6 +34,6 @@
             {% endfor %}
         </tbody>
     </table>
-    <a href="/cluster">Back to Home</a>
+    <a href="/cluster">Back to Dashboard</a>
 </body>
 </html>
