--- a/MyCluster/templates/pod_metrics.html
+++ b/MyCluster/templates/pod_metrics.html
@@ -27,7 +27,7 @@
                 <td>
                     <form action="{{ url_for('restart') }}" method="post">
                         <input type="hidden" name="pod_name" value="{{ pod['pod_name'] }}">
-                        <button type="submit">Delete</button>
+                        <button type="submit">Restart</button>
                     </form>
                 </td>
             </tr>
