--- a/Dep_settings/templates/index.html
+++ b/Dep_settings/templates/index.html
@@ -8,25 +8,26 @@
 </head>
 <body>
     <h1>Kubernetes Management Interface</h1>
+    <div id="alert" class="alert"></div>
     <table>
         <thead>
             <tr>
                 <th>Name</th>
                 <th>Namespace</th>
-                <th>Replicas</th>
                 <th>CPU Limit</th>
                 <th>Memory Limit</th>
+                <th>Ready</th>
                 <th>Action</th>
             </tr>
         </thead>
         <tbody>
             {% for deployment in deployments %}
-            <tr>
+            <tr class="{% if not deployment_ready(deployment) %}not-ready{% endif %}">
                 <td>{{ deployment.metadata.name }}</td>
                 <td>{{ deployment.metadata.namespace }}</td>
-                <td>{{ deployment.spec.replicas }}</td>
                 <td>{{ deployment.spec.template.spec.containers[0].resources.limits.cpu }}</td>
                 <td>{{ deployment.spec.template.spec.containers[0].resources.limits.memory }}</td>
+                <td>{{ 'Yes' if deployment_ready(deployment) else 'No' }}</td>
                 <td>
                     <button onclick="editDeployment('{{ deployment.metadata.name }}', '{{ deployment.metadata.namespace }}')">Change</button>
                 </td>
@@ -34,20 +35,23 @@
             {% endfor %}
         </tbody>
     </table>
-    <div id="deployment-form" style="display: none;">
-        <h2>Edit Deployment</h2>
-        <form id="update-form">
-            <input type="hidden" id="deployment-name" name="name">
-            <input type="hidden" id="deployment-namespace" name="namespace">
-            <label for="replicas">Replicas:</label>
-            <input type="number" id="replicas" name="replicas" required><br>
-            <label for="cpu_limit">CPU Limit:</label>
-            <input type="text" id="cpu_limit" name="cpu_limit"><br>
-            <label for="memory_limit">Memory Limit:</label>
-            <input type="text" id="memory_limit" name="memory_limit"><br>
-            <button type="submit">Update</button>
-        </form>
+
+    <div id="deployment-form-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Edit Deployment</h2>
+            <form id="update-form">
+                <input type="hidden" id="deployment-name" name="name">
+                <input type="hidden" id="deployment-namespace" name="namespace">
+                <label for="cpu_limit">CPU Limit:</label>
+                <input type="text" id="cpu_limit" name="cpu_limit"><br>
+                <label for="memory_limit">Memory Limit:</label>
+                <input type="text" id="memory_limit" name="memory_limit"><br>
+                <button type="submit">Update</button>
+            </form>
+        </div>
     </div>
+
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
