Added node problem detector page

--- a/MyCluster/templates/index.html
+++ b/MyCluster/templates/index.html
@@ -92,7 +92,7 @@
             <li><a href="{{ url_for('check_deployments') }}">Check Deployments</a></li>
             <li><a href="{{ url_for('check_services') }}">Check Services</a></li>
             <li><a href="{{ url_for('check_namespaces') }}">Check Namespaces</a></li>
-            <li><a href="{{ url_for('check_np_detector_logs') }}">Check NPD Logs</a></li>
+            <li><a href="{{ url_for('check_node_status') }}">Check Node Problem Detector Metrics</a></li>
         </ul>
     </nav>
     <a href="/welcome" class="back-button">Back to Home</a>
